# SplineSmoother

./: CMakeLists.txt  LICENSE  README.md
include/: SplineSmoother.hpp
source/: input_data.csv  path.csv
src/: SplineSmoother.cpp  main.cpp
